--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
@@ -11,7 +11,7 @@
 
 @section breadcrumb
 {
-    <a class="govuk-back-link" href="@Url.Action("Index")">Back</a>
+    <a class="govuk-back-link" asp-action="Find" asp-controller="AccountProviders" asp-route-accountHashedId="@ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]">Back</a>
 }
 
 
