--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Add.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Add.cshtml
@@ -1,4 +1,6 @@
-﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AddAccountProviderViewModel
+﻿@using SFA.DAS.ProviderRelationships.Web.Controllers
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AddAccountProviderViewModel
 
 @{
     ViewBag.Title = "Confirm training provider";
@@ -9,7 +11,7 @@
 
 @section breadcrumb
 {
-    <a class="govuk-back-link" asp-action="Find" asp-controller="AccountProviders" asp-route-accountHashedId="@ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]">Back</a>
+    <a class="govuk-back-link" asp-action="@AccountProviders.ActionNames.Find" asp-controller="@AccountProviders.ControllerName" asp-route-accountHashedId="@ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]">Back</a>
 }
 
 <div class="govuk-grid-row">    
