--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
@@ -1,3 +1,5 @@
+@using SFA.DAS.ProviderRelationships.Web.Controllers
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AddedAccountProviderViewModel
 
 @{
@@ -19,7 +21,7 @@
             <p>You need to set permissions for @Model.AccountProvider.ProviderName so that they can act on your behalf.</p>
             <p>You can set permissions in the 'your training providers' section of your account.</p>
         </div>
-        <a class="govuk-button" asp-action="Index" asp-controller="AccountProviders" asp-route-accountHashedId="@ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]" role="button">Return to your training providers</a>
+        <a class="govuk-button" asp-action="@AccountProviders.ActionNames.Index" asp-controller="@AccountProviders.ControllerName" asp-route-accountHashedId="@ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]" role="button">Return to your training providers</a>
     </div>
 </div>
 
