--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -1,20 +1,19 @@
 ﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AccountProvidersViewModel
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using SFA.DAS.ProviderRelationships.Authorization
+@using SFA.DAS.ProviderRelationships.Web.Controllers
 @using SFA.DAS.ProviderRelationships.Web.ViewComponents
 
 @{
     var isOwner = EmployerAccountAuthorizationHandler.CheckUserAccountAccess(User, EmployerUserRole.Owner);
-}
 
-@{
     ViewBag.Title = "Your training providers";
     ViewBag.ZenDeskLabel = "permissions-your-training-providers";
     ViewBag.GaData.Vpv = "/permissions/accountproviders/index";
 }
 
 @section breadcrumb
-    {
+{
     <a href="@Html.EmployerUrls().Account()" class="govuk-back-link">Back</a>
 }
 
@@ -42,7 +41,7 @@
 
         @if (isOwner)
         {
-            <a class="govuk-button" asp-controller="AccountProviders" asp-action="Find" asp-route-accountHashedId="@ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]" role="button">Add a training provider</a>
+            <a class="govuk-button" asp-controller="@AccountProviders.ControllerName" asp-action="@AccountProviders.ActionNames.Find" asp-route-accountHashedId="@ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]" role="button">Add a training provider</a>
         }
     </div>
 </div>
