--- a/src/SFA.DAS.ProviderRelationships.Web/Views/_ViewImports.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/_ViewImports.cshtml
@@ -7,7 +7,6 @@
 @using Microsoft.AspNetCore.Authorization
 @using SFA.DAS.ProviderRelationships.Web.Authorisation
 @using SFA.DAS.ProviderRelationships.Web.Authorisation.Handlers
-
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
+@addTagHelper *, WebEssentials.AspNetCore.CdnTagHelpers
 @inject IEmployerAccountAuthorisationHandler EmployerAccountAuthorizationHandler
