--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Error/Error.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Error/Error.cshtml
@@ -1,7 +1,9 @@
-﻿@{
+﻿@using SFA.DAS.ProviderRelationships.Web.Controllers
+@{
     ViewBag.PageID = "page-error";
     ViewBag.Title = "Error";
     ViewBag.HideNav = true;
+    var accountHashedId = ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]?.ToString();
 }
 
 <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -11,8 +13,8 @@
                 There's been an error
             </h1>
             <p class="govuk-body">
-                <a class="govuk-button" href="/">
-                    Return to account home
+                <a asp-controller="@AccountProviders.ControllerName" asp-action="@AccountProviders.ActionNames.Index" asp-route-accountHashedId="@accountHashedId" class="govuk-button">
+                    Return to training providers
                 </a>
             </p>
         </div>
