--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Error/AccessDenied.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Error/AccessDenied.cshtml
@@ -1,10 +1,7 @@
-﻿@using SFA.DAS.ProviderRelationships.Web.Controllers
-@using Microsoft.AspNetCore.Mvc.TagHelpers
-@{
+﻿@{
     ViewBag.PageID = "page-access-denied";
     ViewBag.Title = "Access denied";
     ViewBag.HideNav = true;
-    var accountHashedId = ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]?.ToString();
 }
 
 <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -14,8 +11,8 @@
                 Your account does not have the right access
             </h1>
             <p class="govuk-body">
-                <a asp-controller="@AccountProviders.ControllerName" asp-action="@AccountProviders.ActionNames.Index" asp-route-accountHashedId="@accountHashedId" class="govuk-button">
-                    Return to training providers
+                <a href="/" class="govuk-button">
+                    Return to account home
                 </a>
             </p>
         </div>
