FAI-628 - Remove MA shared UI package

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -14,7 +14,7 @@
 
 @section breadcrumb
 {
-    <a href="@Html.EmployerUrls().Account()" class="govuk-back-link">Back</a>
+    <a href="@UrlBuilder.AccountsLink()" class="govuk-back-link">Back</a>
 }
 
 @if (TempData.ContainsKey("ProviderName"))
