Add autocomplete enhancement

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
         <script src="/libs/jquery/jquery.min.js"></script>
         <script src="/libs/govuk-frontend/all.js"></script>
         <script src="/js/das-all.min.js"></script>
+        <script src="libs/accessible-autocomplete/accessible-autocomplete.min.js"></script>
         <script src="/js/app.min.js"></script>
 
         @RenderSection("javascript", required: false)
