--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -42,7 +42,7 @@
                 <span class="govuk-error-message">
                     @Html.ValidationMessageFor(m => m.Ukprn)
                 </span>
-                <select id="Ukprn" name="Ukprn" class="govuk-select">
+                <select id="Ukprn" name="Ukprn" class="govuk-select" data-module="autoComplete">
                     <option class="das-js-hide" value="">Select training provider</option>
                     @foreach (var provider in Model.Providers)
                     {
@@ -55,37 +55,3 @@
     </div>
 
 </form>
-
-<script>
-    document.title = document.getElementById('jsChgTitle').textContent;
-    window.onload = function () {
-        var ukprn = jQuery('#Ukprn');
-
-        var gfg = ukprn.closest('.govuk-form-group');
-        if (gfg.hasClass('govuk-form-group--error')) {
-            ukprn.css('border', '4px solid #df3034');
-        }
-
-        var ukprnForm = ukprn.closest('form');
-
-        jQuery('#Ukprn-button').on('click', function (e) {
-            e.preventDefault();
-
-            var ukprnVal = ukprn.val();
-
-            if (ukprnVal) {//has a value
-                ukprnForm.append('<input type="hidden" id="Ukprn-hidden" name="Ukprn-hidden" value="' + ukprnVal + '">').submit();
-            } else {
-                ukprnForm.submit();
-            }
-        });
-        ukprn.attr('type', 'search');
-        document.getElementById('Ukprn').addEventListener('search', function () {
-            ukprn.keyup(function () {
-                if (this.value.length === 3) {
-                    document.getElementById('Ukprn__listbox').scrollTop = 0;
-                }
-            });
-        });//chrome supported to resolve chrome behaviour (resets list if cleared)
-    };
-</script>
