Adding scopes to table heading.

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/HealthCheck/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/HealthCheck/Index.cshtml
@@ -17,8 +17,8 @@
                         <thead>
                             <tr>
                                 <td class="govuk-table__cell"></td>
-                                <th class="govuk-table__header govuk-table__header--center" colspan="2">Request/Response</th>
-                                <th class="govuk-table__header govuk-table__header--center" colspan="2">Publish/Subscribe</th>
+                                <th class="govuk-table__header govuk-table__header--center" colspan="2" scope="col">Request/Response</th>
+                                <th class="govuk-table__header govuk-table__header--center" colspan="2" scope="col">Publish/Subscribe</th>
                             </tr>
                             <tr>
                                 <td class="govuk-table__cell govuk-table__cell--center"></td>
