FAI-628 - When checking account access fall back to check api if not exists

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/Components/AccountProvidersWithMultipleOrganisation/Default.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/Components/AccountProvidersWithMultipleOrganisation/Default.cshtml
@@ -2,7 +2,7 @@
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AccountProvidersViewModel
 
 @{
-    var isOwner = EmployerAccountAuthorizationHandler.CheckUserAccountAccess(User, EmployerUserRole.Owner);
+    var isOwner = await EmployerAccountAuthorizationHandler.CheckUserAccountAccess(User, EmployerUserRole.Owner);
 }
 
 @foreach (var accountProvider in Model.AccountProviders)
