--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -5,7 +5,7 @@
 @using SFA.DAS.ProviderRelationships.Web.ViewComponents
 
 @{
-    var isOwner = EmployerAccountAuthorizationHandler.CheckUserAccountAccess(User, EmployerUserRole.Owner);
+    var isOwner = await EmployerAccountAuthorizationHandler.CheckUserAccountAccess(User, EmployerUserRole.Owner);
 
     ViewBag.Title = "Your training providers";
     ViewBag.ZenDeskLabel = "permissions-your-training-providers";
