--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -12,7 +12,7 @@
 
 @section breadcrumb
 {
-    <a class="govuk-back-link" asp-controller="@AccountProviders.ControllerName" asp-action="@AccountProviders.ActionNames.Index" asp-route-accountHashedId="@ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]">Back</a>
+    <a class="das-js-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
